--- a/LWWebLoader/Assets/loader.html
+++ b/LWWebLoader/Assets/loader.html
@@ -309,47 +309,122 @@
         });
 
 
+        /**
+         * @return {string}
+         */
+        function Uint8ToString(u8a){
+            let CHUNK_SZ = 0x8000;
+            let c = [];
+            for (let i=0; i < u8a.length; i+=CHUNK_SZ) {
+                c.push(String.fromCharCode.apply(null, u8a.subarray(i, i+CHUNK_SZ)));
+            }
+            return c.join("");
+        }
 
+        function arrayBufferToBase64( buffer ) {
+            var binary = '';
+            var bytes = new Uint8Array( buffer );
+            var len = bytes.byteLength;
+            for (var i = 0; i < len; i++) {
+                binary += String.fromCharCode( bytes[ i ] );
+            }
+            return window.btoa( binary );
+        }
+
+
+
+        function base64ToArrayBuffer(base64) {
+            var binary_string =  window.atob(base64);
+            var len = binary_string.length;
+            var bytes = new Uint8Array( len );
+            for (var i = 0; i < len; i++)        {
+                bytes[i] = binary_string.charCodeAt(i);
+            }
+            return bytes.buffer;
+        }
+
+        function outputData(requestId,data) {
+            let contentType = data.contentType;
+            let response = {requestId: requestId};
+            if (contentType.includes('application/json')) {
+                response.type = 'json';
+                response.value = data.value;
+                window.webkit.messageHandlers.bridge.postMessage(response);
+            } else if (contentType.includes('text')) {
+                response.type = 'plaintext';
+                response.value = data.value;
+                window.webkit.messageHandlers.bridge.postMessage(response);
+            } else {
+                response.type = 'b64text';
+                response.value = arrayBufferToBase64(data.value);
+                window.webkit.messageHandlers.bridge.postMessage(response);
+            }
+
+            console.log('response native:', JSON.stringify(response));
+
+        }
+
+        function loadData(requestId, url, requestInit) {
+            fetch(url, requestInit).then(res => {
+
+                let contentType = res.headers.get('content-type');
+                if (contentType.includes('application/json')) {
+                    return {
+                        contentType: contentType,
+                        value: res.json()
+                    };
+                } else if (contentType.includes('text')) {
+                    return {
+                        contentType: contentType,
+                        value: res.text()
+                    };
+                } else {
+                    return {
+                        contentType: contentType,
+                        value: res.arrayBuffer()
+                    };
+                }
+
+            }).catch(error => {
+                console.error('Error:', error);
+                return {
+                    contentType: 'error',
+                    value: error
+                };
+
+            }).then(data => {
+
+                if (data.value && typeof data.value.then === 'function') {
+                    return data.value.then(resp => {
+                        return {
+                            contentType: data.contentType,
+                            value: resp
+                        };
+                    });
+                } else {
+                    outputData(requestId, data);
+                }
+
+            }).then(data => {
+                outputData(requestId, data)
+            });
+        }
 
         //GET
         //参考: https://developer.mozilla.org/zh-TW/docs/Web/API/Fetch_API/Using_Fetch
         function getData(requestId, url, requestInit) {
-
-            fetch(url, requestInit).then(res => {
-                return res.json();
-
-            }).catch(error => {
-                console.error('Error:', error);
-                return error;
-
-            }).then(response => {
-                console.log('Success:', response);
-                response.requestId = requestId;
-                window.webkit.messageHandlers.jsontext.postMessage(response);
-            });
+            loadData(requestId, url, requestInit);
 
         }
 
         //POST
+        //参考：https://zhuanlan.zhihu.com/p/34291688
         function postData(requestId, url, requestInit) {
-
-            fetch(url, requestInit).then(res => {
-                return res.json();
-
-            }).catch(error => {
-                console.error('Error:', error);
-                return error;
-
-            }).then(response => {
-                console.log('Success:', response);
-                response.requestId = requestId;
-                window.webkit.messageHandlers.jsontext.postMessage(response);
-            });
-
+            loadData(requestId, url, requestInit);
         }
 
         //Upload Json Data
-        function uploadJson(requestId, url, data) {
+        function uploadJson(requestId, url, requestInit, b64Str) {
             fetch(url, {
                 method: 'POST', // or 'PUT'
                 body: JSON.stringify(data), // data can be `string` or {object}!
@@ -365,101 +440,136 @@
 
             }).then(response => {
                 console.log('Success:', response);
-                window.webkit.messageHandlers.jsontext.postMessage(response);
+                window.webkit.messageHandlers.bridge.postMessage(response);
 
             });
-        }
 
-        /**
-         * @return {string}
-         */
-        function Uint8ToString(u8a){
-            let CHUNK_SZ = 0x8000;
-            let c = [];
-            for (let i=0; i < u8a.length; i+=CHUNK_SZ) {
-                c.push(String.fromCharCode.apply(null, u8a.subarray(i, i+CHUNK_SZ)));
+
+/*
+            //参考：https://stackoverflow.com/questions/35711724/upload-progress-indicators-for-fetch
+            function consume(reader) {
+                var total = 0
+                return new Promise((resolve, reject) => {
+                    function pump() {
+                        reader.read().then(({done, value}) => {
+                            if (done) {
+                                resolve()
+                                return
+                            }
+                            total += value.byteLength
+                            log(`received ${value.byteLength} bytes (${total} bytes in total)`)
+                            pump()
+                        }).catch(reject)
+                    }
+                    pump()
+                })
             }
-            return c.join("");
+
+            fetch("/music/pk/altes-kamuffel.flac")
+                .then(res => consume(res.body.getReader()))
+                .then(() => log("consumed the entire body without keeping the whole thing in memory!"))
+                .catch(e => log("something went wrong: " + e))
+*/
+
+/*
+            //参考：https://zhuanlan.zhihu.com/p/34291688
+            const fd = new FormData()
+            fd.append('file', fileBtn.files[0])
+            fd.append('userName', userName.value)
+            fd.append('age','18')
+            fetch('http://localhost:3036/upload', {
+                method: 'POST',
+                body: fd,
+                // headers: {
+                //   'Content-Type': 'multipart/form-data'
+                // }
+            }).then(res => {
+                if(res.ok) {
+                    console.log('success')
+                    return res.json();
+                } else {
+                    console.log('网络错误')
+                }
+            }).then(res => {
+                console.log('res is',res);
+            })
+*/
+
         }
 
-        function downloadData(requestId, url, requestInit) {
-            // const fileStream = streamSaver.createWriteStream(requestId);
-            const fileStream = streamSaver.createWriteStream(requestId, {
-                size: 22, // (optional) Will show progress
-                writableStrategy: undefined, // (optional)
-                readableStrategy: undefined  // (optional)
-            });
+        //download File
+        function downloadFile(requestId, url, requestInit) {
+            loadData(requestId, url, requestInit);
+        }
+
+        //download Stream
+        function downloadStream(requestId, url, requestInit) {
 
             fetch(url,requestInit).then(res => {
-                const readableStream = res.body;
+                let reader = res.body.getReader();
+                const totalLength = +res.headers.get('Content-Length');
+                let receivedLength = 0;
+                let chrunkOrder = 0;
 
-                // more optimized
-                if (window.WritableStream && readableStream.pipeTo) {
-                    return readableStream.pipeTo(fileStream)
-                        .then(response => {
-                            console.log('=====done writing');
-                            return response;
-                        })
-                        .catch(function (error) {
-                            return error;
-                        });
-                }
+                window.webkit.messageHandlers.bridge.postMessage({
+                    requestId: requestId,
+                    type: 'b64streamstart',
+                    total: totalLength,
+                    received: receivedLength,
+                    value: '',
+                });
 
-                window.writer = fileStream.getWriter();
-
-                const reader = res.body.getReader();
-                window.webkit.messageHandlers.b64streamstart.postMessage('');
-                const pump = () => reader.read()
+                let pump = () => reader.read()
                     .then(response => {
                         if (response.done) {
-                            writer.close();
-                            window.webkit.messageHandlers.b64streamend.postMessage('');
+
+                            window.webkit.messageHandlers.bridge.postMessage({
+                                requestId: requestId,
+                                type: 'b64streamend',
+                                done: true,
+                                total: totalLength,
+                                received: totalLength,
+                                value: '',
+                            });
+                            return null;
 
                         } else { // value for fetch streams is a Uint8Array
-                            //参考：
-                            // iOS二进制数据与js的透传：https://www.jianshu.com/p/0d3f4511778c
-                            // convert uint8 Array to base64 Encoded String : https://stackoverflow.com/questions/12710001/how-to-convert-uint8-array-to-base64-encoded-string
-                            //
-                            // let decoder = new TextDecoder('utf8');
-                            // let b64encoded = btoa(decoder.decode(response.value));
-                            // let b64encoded = btoa(String.fromCharCode.apply(null, response.value));
-                            let b64encoded = btoa(Uint8ToString(response.value));
-                            window.webkit.messageHandlers.b64streaming.postMessage(b64encoded);
-                            writer.write(response.value).then(pump)
+                            let responseValue = response.value;
+                            receivedLength += responseValue.length;
+                            let b64encoded = arrayBufferToBase64(responseValue.buffer);
+                            window.webkit.messageHandlers.bridge.postMessage({
+                                requestId: requestId,
+                                type: 'b64streaming',
+                                chrunkOrder: chrunkOrder,
+                                total: totalLength,
+                                received: receivedLength,
+                                value: b64encoded,
+                            });
+                            chrunkOrder++;
+                            return pump();
                         }
+
                     })
                     .catch(function (error) {
                         return error;
                     });
 
-                pump()
+                pump();
 
             }).catch(error => {
                 console.error('Error:', error);
-                return error;
+                window.webkit.messageHandlers.bridge.postMessage({
+                    requestId: requestId,
+                    type: 'b64streamend',
+                    done: false,
+                    total: 0,
+                    received: 0,
+                    value: '',
+                });
 
             })
 
         }
-
-        function downloadFile() {
-
-            fetch('http://mytest.com/test.zip').then(res => {
-                return res.blob();
-
-            }).then(blob => {
-                let a = document.createElement('a');
-                let url = window.URL.createObjectURL(blob);
-                let filename = 'myfile.zip';
-                a.href = url;
-                a.download = filename;
-                a.click();
-                window.URL.revokeObjectURL(url);
-                document.body.removeChild(a);
-            });
-
-        }
-
 
 
 
